[qjh] feat: 在后端拿到数据之后更新 header ，测试getUserBasicInformation方法(resolve 和 reject 两种情况)

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -21,7 +21,7 @@
   font-weight: bold;
   font-size: 30px;
 }
-.avatar {
+#user-avatar {
   margin-top: -50px;
   border-radius: 50%;
   height: $image-size;
