--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -30,6 +30,8 @@
   }
 }
 .about-me-title {
+  margin-top: 0;
+  padding-top: 1em;
   color: $primary-color;
   font-weight: bold;
   font-size: 16px;
