--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -18,6 +18,7 @@
       section {
         display: flex;
         flex-direction: column;
+        width: 90%;
         margin: 0 0 1em 5em;
         padding: 1em;
         background-color: $gray-light;
