feedback from Du Juan

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -21,6 +21,7 @@
   font-weight: bold;
   font-size: 30px;
 }
+// TODO feedback: 不建议用id
 #user-avatar {
   margin-top: -50px;
   border-radius: 50%;
